# consim

./: .gitignore  CMakeLists.txt
fpga/: CMakeLists.txt
fpga/gowin_tang_nano_20k/: nano_20k.gprj
fpga/gowin_tang_nano_20k/impl/: project_process_config.json
fpga/gowin_tang_nano_20k/impl/gwsynthesis/: nano_20k.prj  nano_20k.vg  nano_20k_syn.rpt.html  nano_20k_syn_resource.html  nano_20k_syn_rsc.xml
fpga/gowin_tang_nano_20k/impl/pnr/: cmd.do  nano_20k.binx  nano_20k.db  nano_20k.pin.html  nano_20k.power.html  nano_20k.rpt.html  nano_20k.rpt.txt  nano_20k.timing_paths  nano_20k.tr.html  nano_20k_tr_cata.html  nano_20k_tr_content.html
fpga/gowin_tang_nano_20k/impl/temp/: rtl_parser.result  rtl_parser_arg.json
fpga/gowin_tang_nano_20k/src/: blink_led.cst  uart.cst
rtl/: led.v
rtl/core/: core.sv  core.v  defines.sv  div.v  id.sv  id_ex.sv  if_id.sv  pc_reg.sv  regs.sv  sim_ram.v
rtl/perips/: led.sv  uart_rx.sv  uart_top.sv
rtl/utils/: gen_dff.sv  gen_pipe_dff.sv
tools/: config_tang_nano_20k.py
verilator/: CMakeLists.txt  sim_core.cpp  sim_led.cpp  sim_uart.cpp
